--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -21,7 +21,7 @@ header {
     font-family: "Passion One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 30px;
+    font-size: 4vw;
     font-variant: small-caps;
 }
 
@@ -36,15 +36,15 @@ article {
     background-color: white;
     color: black;
 }
-
+ 
 picture > article > pre > p {
     background-color: rgba(0, 0, 0, 0.568);
-    width: 400px;
+    width: 270px;
 }
 
 p#subtitulo {
     font-family: Verdana, Tahoma, sans-serif;
-    font-size: 20px;
+    font-size: 2.5vw;
 }
 
 a {
@@ -57,7 +57,7 @@ a:hover {
 }
 
 p {
-    font-size: 25px;
+    font-size: 3.5vw;
     line-height: 50px;
     padding-left: 25px;
     font-family: "Sriracha", sans-serif;
@@ -70,8 +70,4 @@ footer {
     font-family: Verdana, Tahoma, sans-serif;
     font-size: 16px;
     padding: 10px;
-}
-
-img#flor {
-    height: 450px;
 }
