--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -4,70 +4,96 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
 
+:root {
+    --fonte1: Verdana, Tahoma, sans-serif;
+    --fonte2: "Passion One", sans-serif;
+    --fonte3: "Sriracha", sans-serif;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
-    background-color: darkgray;
+    min-height: 100vh;
+    background-color: darkgrey;
+    font-family: var(--fonte1);
 }
 
 header {
     background-color: black;
     color: white;
     text-align: center;
-    padding: 35px;
-    font-family: "Passion One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 4vw;
+}
+
+header > h1 {
+    padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
-picture > article {
-    background-color: rgba(0, 0, 0, 0.671);
-    color: white;
-    padding: 70px 0px;
-    padding-left: 20px;
-}
-
-article {
-    background-color: white;
-    color: black;
-}
- 
-picture > article > pre > p {
-    background-color: rgba(0, 0, 0, 0.568);
-    width: 270px;
-}
-
-p#subtitulo {
-    font-family: Verdana, Tahoma, sans-serif;
-    font-size: 2.5vw;
+header > p {
+    padding-bottom: 50px;
 }
 
 a {
-    text-decoration: none;
     color: white;
+    text-decoration: none;
+    font-weight: bolder;
 }
 
-a:hover {
+header a:hover, footer a:hover {
     text-decoration: underline;
 }
 
-p {
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+    font-family: var(--fonte3);
     font-size: 3.5vw;
-    line-height: 50px;
-    padding-left: 25px;
-    font-family: "Sriracha", sans-serif;
+}
+
+section > p {
+    padding-bottom: 2em;
+}
+
+section.normal {
+    background-color: white;
+    color: black;
+}
+
+section.imagem {
+    background-color: rgba(0, 0, 0, 0.664);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.486);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.582);
+    display: inline-block;
+    padding: 5px;
+    text-shadow: 2px 2px 0px black;
+}
+
+section#img01 {
+    background-image: url('imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url('imagens/background002.jpg');
 }
 
 footer {
     background-color: black;
     color: white;
     text-align: center;
-    font-family: Verdana, Tahoma, sans-serif;
-    font-size: 16px;
     padding: 10px;
 }
